defs = [
    '-DCGIBIN_DIR="' + CGIBIN_DIR + '"',
    '-DHELP_DIR="' + HELP_DIR + '"',
    '-DETC_DIR="' + ETC_DIR + '"',
    '-DCONF_DIR="' + CONF_DIR + '"',
    '-DRC_DIR="' + RC_DIR + '"',
    '-DLOCALEDIR="' + localedir + '"',
    '-DWIN32_LEAN_AND_MEAN=1',
    # '-w',
]

with_gc_lib = static_library(
    'with_gc',
    [
        'html/readbuffer.cpp',
        'html/html_feed_env.cpp',
        'html/table.cpp',
        'html/html_tag.cpp',
        'html/tagtable.cpp',
        'html/html_parser.cpp',
        'html/html_command.cpp',
        'Str.cpp',
        'regex.cpp',
        'hash.cpp',
        'buffer.cpp',
        'etc.cpp',
        'search.cpp',
        'linein.cpp',
        'local_cgi.cpp',
        'rc.cpp',
        'mailcap.cpp',
        'symbol.cpp',
        'history.cpp',
        'version.cpp',
        'ssl_util.cpp',
        'url_stream.cpp',
        'app.cpp',
        'http_auth.cpp',
        'http_session.cpp',
        'loaddirectory.cpp',
        'alloc.cpp',
        'tabbuffer.cpp',
        'proc.cpp',
        'line_layout.cpp',
        'line_data.cpp',
        'file_util.cpp',
        'dict.cpp',
        'matrix.cpp',
        'option.cpp',
        'option_param.cpp',
    ],
    dependencies: deps + [without_gc_dep],
    c_args: defs,
    cpp_args: defs,
)
with_gc_dep = declare_dependency(
    include_directories: include_directories('.'),
    link_with: with_gc_lib,
    dependencies: deps,
)
